--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -3,22 +3,24 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-    - main
+      - main
   push:
     branches:
-    - main
+      - main
+    tags:
+      - v.*
 env:
-  AWS_ACCESS_KEY_ID: xxxxUUFG
-  AWS_SECRET_ACCESS_KEY: xxxxMSzY
-  CLOUDFRONT_ID: xxxxZHP9
-  CLOUDFRONT_ID_NEW_WEBSITE: xxxxUKJ4
-  DOC_BOT_TOKEN: xxxxwpcy
-  FLOW_BIN_PRIVATE_KEY_BASE64: xxxxLS0K
-  FLOW_BOT_EMAIL: xxxx.com
-  FLOW_BOT_TOKEN: xxxxX27z
-  NPM_TOKEN: xxxxAJvJ
-  S3_BUCKET: xxxx.org
-  S3_BUCKET_NEW_WEBSITE: xxxxtorg
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  CLOUDFRONT_ID: ${{ secrets.CLOUDFRONT_ID }}
+  CLOUDFRONT_ID_NEW_WEBSITE: ${{ secrets.CLOUDFRONT_ID_NEW_WEBSITE }}
+  DOC_BOT_TOKEN: ${{ secrets.DOC_BOT_TOKEN }}
+  FLOW_BIN_PRIVATE_KEY_BASE64: ${{ secrets.FLOW_BIN_PRIVATE_KEY_BASE64 }}
+  FLOW_BOT_EMAIL: ${{ secrets.FLOW_BOT_EMAIL }}
+  FLOW_BOT_TOKEN: ${{ secrets.FLOW_BOT_TOKEN }}
+  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  S3_BUCKET: ${{ secrets.S3_BUCKET }}
+  S3_BUCKET_NEW_WEBSITE: ${{ secrets.S3_BUCKET_NEW_WEBSITE }}
 jobs:
   build_js:
     runs-on: ubuntu-latest
@@ -203,7 +205,6 @@ jobs:
       run: |-
         make deps
       shell: C:\cygwin\bin\bash.exe '{0}'
-      working-directory: ${{ github.workspace }}
       env:
         PATH: /usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0
     - name: Build flow.exe
@@ -376,6 +377,8 @@ jobs:
     - name: Pack flow-parser
       run: |
         mkdir -p packages/flow-parser/dist/
+        pwd
+        ls -lR .
         cp dist/flow_parser.js packages/flow-parser/dist/flow_parser.js
         make dist/npm-flow-parser.tgz
     - name: Pack flow-parser-bin
@@ -442,3 +445,111 @@ jobs:
         cd website
         yarn add gh-pages
         yarn gh-pages -d build -u "flow-bot <flow-bot@users.noreply.github.com>" --repo https://${FLOW_BOT_TOKEN}@github.com/facebook/flow.git --no-history
+  # Deploy jobs
+  npm_deploy:
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    runs-on: ubuntu-latest
+    container:
+      image: node:12
+    needs:
+    - npm_pack
+    steps:
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        path: "~/flow"
+    - name: Deploy to npm
+      run: ".circleci/deploy_npm.sh"
+  github_linux:
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    runs-on: ubuntu-latest
+    container:
+      image: appropriate/curl:latest
+    needs:
+    - build_linux
+    steps:
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        path: "/flow"
+    - name: Upload Linux binary
+      run: .circleci/github_upload.sh dist/flow-linux64.zip "flow-linux64-${{ github.ref }}.zip"
+    - name: Upload Linux libflowparser
+      run: .circleci/github_upload.sh dist/libflowparser-linux64.zip "libflowparser-linux64-${{ github.ref }}.zip"
+  github_macos:
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    runs-on: ubuntu-latest
+    container:
+      image: appropriate/curl:latest
+    needs:
+    - build_macos
+    steps:
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        path: "/flow"
+    - name: Upload Mac binary
+      run: .circleci/github_upload.sh dist/flow-osx.zip "flow-osx-${{ github.ref }}.zip"
+    - name: Upload Mac libflowparser
+      run: .circleci/github_upload.sh dist/libflowparser-osx.zip "libflowparser-osx-${{ github.ref }}.zip"
+  github_macos_arm64:
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    runs-on: ubuntu-latest
+    container:
+      image: appropriate/curl:latest
+    needs:
+    - build_macos_arm64
+    steps:
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        path: "/flow"
+    - name: Upload Mac binary
+      run: .circleci/github_upload.sh dist/flow-osx-arm64.zip "flow-osx-arm64-${{ github.ref }}.zip"
+    - name: Upload Mac libflowparser
+      run: .circleci/github_upload.sh dist/libflowparser-osx-arm64.zip "libflowparser-osx-arm64-${{ github.ref }}.zip"
+  github_win:
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    runs-on: ubuntu-latest
+    container:
+      image: appropriate/curl:latest
+    needs:
+    - build_win
+    steps:
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        path: "/flow"
+    - name: Upload Windows binary
+      run: .circleci/github_upload.sh dist/flow-win64.zip "flow-win64-${{ github.ref }}.zip"
+  flow_bin_deploy:
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    runs-on: ubuntu-latest
+    container:
+      image: node:12
+    needs:
+    - github_linux
+    - github_macos
+    - github_win
+    steps:
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        path: "~/flow"
+    - name: Deploy flow-bin
+      run: ".circleci/deploy_flow_bin.sh"
+  try_flow_deploy:
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    runs-on: ubuntu-latest
+    container:
+      image: node:12
+    needs:
+    - build_js
+    steps:
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        path: "~/flow"
+    - name: Assemble files
+      run: |
+        cp bin/flow.js packages/try-flow-website-js/flow.js
+        cp -r lib packages/try-flow-website-js/flowlib
+        make dist/npm-try-flow-website-js.tgz
+    - name: Deploy to NPM
+      run: |
+        echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+        npm publish ./dist/npm-try-flow-website-js.tgz
+    
