--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -51,16 +51,16 @@ jobs:
         cp src/parser/flow_parser.js packages/flow-parser/flow_parser.js
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: |-
-          ./bin/flow.js
-          ./dist/flow_parser.js
-          ./packages/flow-parser/flow_parser.js
-    - uses: actions/upload-artifact@v3.1.3
-      with:
+        name: build_js_bin
         path: bin/flow.js
     - uses: actions/upload-artifact@v3.1.3
       with:
+        name: build_js_dist
         path: dist/flow_parser.js
+    - uses: actions/upload-artifact@v3.1.3
+      with:
+        name: build_js_packages
+        path: packages/flow-parser/flow_parser.js
   build_linux:
     runs-on: ubuntu-latest
     container:
@@ -91,16 +91,14 @@ jobs:
         cp src/parser/dist/libflowparser.zip dist/libflowparser-linux64.zip
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: |-
-          ./bin/linux/flow
-          ./dist/flow-linux64.zip
-          ./dist/libflowparser-linux64.zip
+        name: build_linux_bin
+        path: bin/linux/flow
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: dist/flow-linux64.zip
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: dist/libflowparser-linux64.zip
+        name: build_linux_dist
+        path: |
+          dist/flow-linux64.zip
+          dist/libflowparser-linux64.zip
   build_macos:
     runs-on: macos-latest
     steps:
@@ -131,16 +129,14 @@ jobs:
         cp src/parser/dist/libflowparser.zip dist/libflowparser-osx.zip
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: |-
-          ./bin/macos/flow
-          ./dist/flow-osx.zip
-          ./dist/libflowparser-osx.zip
+        name: build_macos_bin
+        path: bin/macos/flow
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: dist/flow-osx.zip
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: src/parser/dist/libflowparser.zip
+        name: build_macos_dist
+        path: |
+          dist/flow-osx.zip
+          dist/libflowparser-osx.zip
   build_macos_arm64:
     runs-on: macos-13-xlarge
     steps:
@@ -171,15 +167,17 @@ jobs:
         cp src/parser/dist/libflowparser.zip dist/libflowparser-osx-arm64.zip
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: |-
-          ./bin/macos-arm64/flow
-          ./dist/flow-osx-arm64.zip
-          ./dist/libflowparser-osx-arm64.zip
+        name: build_macos_arm64_bin
+        path: bin/macos-arm64/flow
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: dist/flow-osx-arm64.zip
+        name: build_macos_arm64_dist
+        path: |
+          dist/flow-osx-arm64.zip
+          dist/libflowparser-osx-arm64.zip
     - uses: actions/upload-artifact@v3.1.3
       with:
+        name: build_macos_arm64_src_parser_dist
         path: src/parser/dist/libflowparser-osx-arm64.zip
   build_win:
     runs-on: windows-latest
@@ -227,13 +225,16 @@ jobs:
         PATH: /usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: |
-          ./bin/win64/flow.exe
-          ./dist/flow-win64.zip
-          ./bin/win64/run_parser_tests.exe
+        name: build_win_bin
+        path: bin/win64/flow.exe
+          dist/flow-win64.zip
+          bin/win64/run_parser_tests.exe
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: ".\\dist\\flow-win64.zip"
+        name: build_win_dist
+        path: |
+          dist/flow-win64.zip
+          bin/win64/run_parser_tests.exe
   runtests_linux:
     runs-on: ubuntu-latest
     container:
@@ -374,6 +375,45 @@ jobs:
     steps:
     - uses: actions/checkout@v3.6.0
     - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_js_bin
+        path: bin
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_js_dist
+        path: dist
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_js_packages
+        path: packages/flow-parser
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_linux_bin
+        path: bin/linux
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_linux_dist
+        path: dist
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_macos_bin
+        path: bin/macos
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_macos_dist
+        path: dist
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_macos_arm64_bin
+        path: bin/macos-arm64
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_macos_arm64_dist
+        path: dist
+    - uses: actions/download-artifact@v3.0.2
+      with:
+        name: build_macos_arm64_src_parser_dist
+        path: src/parser/dist
     - name: Pack flow-parser
       run: |
         mkdir -p packages/flow-parser/dist/
@@ -397,23 +437,12 @@ jobs:
         make dist/npm-flow-node.tgz
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: |-
-          ./dist/npm-flow-parser.tgz
-          ./dist/npm-flow-parser-bin.tgz
-          ./dist/npm-flow-node.tgz
-          ./dist/npm-flow-remove-types.tgz
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: dist/npm-flow-parser.tgz
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: dist/npm-flow-parser-bin.tgz
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: dist/npm-flow-node.tgz
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: dist/npm-flow-remove-types.tgz
+        name: npm_pack
+        path: |
+          dist/npm-flow-parser.tgz
+          dist/npm-flow-parser-bin.tgz
+          dist/npm-flow-node.tgz
+          dist/npm-flow-remove-types.tgz
   website_deploy:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
